REST fixed loading bar z-index

--- a/app/bathymetry-app/src/theme/Theme.css
+++ b/app/bathymetry-app/src/theme/Theme.css
@@ -5,7 +5,7 @@ html *{
 .loading-container {
     display: block;
     position: fixed; 
-    z-index: 1; 
+    z-index: 2000; 
     left: 0;
     top: 0;
     width: 100%; 
